--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="select_phone_label">Select which phone number you would like to send a message to</string>
     <string name="phone_numbers">Phone Numbers</string>
     <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
