Added error view... convert to custom dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="phone_numbers">Phone Numbers</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="no_party_name">No Party Name</string>
+    <string name="add_name_for_party">Add a name for this party homie</string>
+    <string name="no_members">No Members</string>
+    <string name="add_people_to_party">Add people to this party by picking them in the table</string>
 </resources>
