--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,25 @@
     <string name="no_members">No Members</string>
     <string name="add_people_to_party">Add people to this party by picking them in the table</string>
     <string name="settings">Settings</string>
+    <string name="preference_file_key">roolet-settings</string>
+    <string name="call_type">Call Type</string>
+    <string name="audio">Audio</string>
+    <string name="video">Video</string>
+    <string name="call_settings">Call Settings</string>
+    <string name="title_activity_settings2">SettingsActivity2</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
