Added contacts tutorial dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="title_activity_settings2">SettingsActivity2</string>
 
     <string name="groups_tutorial_seen_pref">groups-tutorial-seen-pref</string>
+    <string name="contacts_tutorial_seen_pref">contacts-tutorial-seen-pref</string>
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
@@ -59,4 +60,7 @@
     <string name="de_squaw">De Squaw</string>
     <string name="de_squaw_members">Terrance Diggs, Jorge Arnedo, Charlotte Kennedy and 8 Others</string>
     <string name="tap_here_to_create_a_new_party">Tap here to create a new party</string>
+    <string name="tap_anywhere_to_dismiss">Tap anywhere to dismiss</string>
+    <string name="edit_the_name_of_party_here">Edit the name of this /n party here</string>
+    <string name="select_party_members_from_your_contacts">Select party members from \n your contacts</string>
 </resources>
