Swapped settings activity w appropriate transitions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="tap_this_button_to_call_a_random_member_from_this_party">Tap this button to call a random member from this party</string>
     <string name="game_mode_summary">Roolet will give you a rule/challenge to follow for each call</string>
     <string name="making_fun_stuff">Making fun stuff :)</string>
+    <string name="cirtual_x_d17_productions">Cirtual x D17 Productions</string>
 </resources>
