--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="no_members">No Members</string>
     <string name="add_people_to_party">Add people to this party by picking them in the table</string>
     <string name="settings">Settings</string>
-    <string name="preference_file_key">roolet-settings</string>
     <string name="call_type">Call Type</string>
     <string name="audio">Audio</string>
     <string name="video">Video</string>
@@ -32,27 +31,15 @@
     <string name="report_a_problem">Report a Problem</string>
     <string name="about_us">About Us</string>
 
+    <string name="title_activity_settings">SettingsActivity</string>
+
     <string name="repeat_calls_pref">repeat-calls-pref</string>
     <string name="game_mode_pref">game-mode-pref</string>
-    <string name="title_activity_settings2">SettingsActivity2</string>
-
     <string name="groups_tutorial_seen_pref">groups-tutorial-seen-pref</string>
     <string name="group_detail_tutorial_seen_pref">group-detail-tutorial-seen-pref</string>
     <string name="contacts_tutorial_seen_pref">contacts-tutorial-seen-pref</string>
 
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <!--  Tutorial strings  -->
     <string name="skip">Skip</string>
     <string name="roolet_uses_contacts_message">Roolet uses your contacts to build parties of people to call from</string>
     <string name="after_building_party_message">After building a party, you can go to that party\'s page by selecting it in this table</string>
