--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,8 @@
     <string name="your_rule">Your Rule</string>
     <string name="got_it">Got it</string>
     <string name="contact_permissions_needed">We don\'t have permission to get your contacts, open your phone settings to fix that :)</string>
+    <string name="are_you_sure_you_want_to_delete_this_party">Are you sure you want to delete this party?</string>
+    <string name="hold_up">Hold up</string>
+    <string name="nah">Nah</string>
+    <string name="yea">Yea</string>
 </resources>
