Added error dialog for when all group members have been called

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="yea">Yea</string>
 
     <string name="oooop">Oooop!</string>
+    <string name="all_members_called">All members of this party have been called</string>
 </resources>
