--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="making_fun_stuff">Making fun stuff :)</string>
     <string name="cirtual_x_d17_productions">Cirtual x D17 Productions</string>
     <string name="create_group">Create Group</string>
+    <string name="edit_group">Edit Group</string>
 
     <string name="your_rule">Your Rule</string>
     <string name="got_it">Got it</string>
