--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
 
     <string name="oooop">Oooop!</string>
     <string name="all_members_called">All members of this party have been called</string>
+    <string name="someone_with_a_really_long_name">Someone with a really long name</string>
 </resources>
